# insyde-gerrit-code-downloader

./: .gitattributes  .gitignore  LICENSE  README.md  build.bat  build.sh  main.py  pyproject.toml  requirements.txt
src/: Project.pfc
src/InsydeGerritCodeDownloader/: __init__.py  __main__.py  config.py  console.py  core.py  gerrit.py  git_ops.py  pfc.py  utils.py
